--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.4",
+    "react-syntax-highlighter": "^16.1.0",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
